# rag-table

./: .gitignore  README.md
python/: README.md  README.mdc  pyproject.toml  requirements.txt
python/notebooks/: 01_explore_and_compare.ipynb  table-recognition.ipynb
python/rag/: app.py
python/rag/chroma_db/: chroma.sqlite3
python/ragtab/: __init__.py  model_loader.py  ocr.py  pipeline.py  utils.py
python/ragtab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
