[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragtab"
version = "0.1.4"
description = "Trích xuất bảng từ ảnh thành Markdown cho RAG pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Dinh Duc Tai", email = "dinhductai2004@gmail.com"}
]
keywords = ["table-extraction", "ocr", "unet", "rag", "table-structure-recognition"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0",
    "torchvision",
    "numpy",
    "opencv-python",
    "Pillow",
    "paddlepaddle>=3.0",
    "paddleocr>=3.0",
    "scipy",
    "matplotlib",
    "timm",
    "tqdm",
]

[project.optional-dependencies]
gpu = ["paddlepaddle-gpu>=3.0"]
dev = ["pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/tai03102004/rag-table"
Repository = "https://github.com/tai03102004/rag-table"
Issues = "https://github.com/tai03102004/rag-table/issues"

[tool.setuptools.packages.find]
include = ["ragtab*"]